--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <a href="/login">login</a>
-    <a href="/logout">logout</a>
-    <a href="/random">random</a>
+    <h2>Search</h2>
+    <form action="/search" method="get"> </form>
 </body>
+
 </html>
