--- a/views/pages/details.ejs
+++ b/views/pages/details.ejs
@@ -25,14 +25,17 @@
                 <section class="sub-description">
                     <ul>
                         <li class="title"><h2>Information</h2></li>
-                        <li><%= anime.episodes %></li>
-                        <li><%= anime.genres %></li>
-                        <li><%= anime.status %></li>
-                        <li><%= anime.aired %></li>
-                        <li><%= anime.duration %></li>
-                        <li><%= anime.rating %></li>
+                        <li>episodes:  <%= anime.episodes %></li>
+                        <li>genres:  <%= anime.genres %></li>
+                        <li>status: <%= anime.status %></li>
+                        <li>aired: <%= anime.aired %></li>
+                        <li>duration: <%= anime.duration %></li>
+                        <li> rating:  <%= anime.rating %></li>
                     </ul>
-                    <ul></ul>
+                    <ul><li class="title"><h2>rating</h2></li>
+                        <li> score: <%= anime.score %></li>
+                        <li>popularity:  <%= anime.popularity %></li>
+                     
                 </section>
             </article>
         </main>
