--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,42 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime-Limk</title>
-    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css"/></head>
+    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css" />
+</head>
+
 <body>
     <a href="/login">login</a>
     <a class="lol" href="/logout">logout</a>
     <a href="/random">random</a>
     <section id='seasonal'>
         <% animeArr.forEach((item)=>{%>
-            <div>
-            <p><%= item.title%></p>
-            <img src="<%= item.image_url%>" style="max-width: 100%;">
+        <div>
+            <form id="searched-form" action="/details/<%= item.id%>">
+                <button type="submit">
+                    <p><%= item.title%></p>
+                    <img src="<%= item.image_url%>" style="max-width: 100%;">
+                </button>
+            </form>
         </div>
         <% })%>
     </section>
     <section id="banner">
         <% if(localUsername != null){%>
-            <p>logged</p>
-            <img src="https://placehold.it/960x300/" width="100%">
+        <p>logged</p>
+        <img src="https://placehold.it/960x300/" width="100%">
         <%}else {%>
-            <p>not logged</p>
-            <img src="https://placehold.it/960x300/ff7" width="100%">
+        <p>not logged</p>
+        <img src="https://placehold.it/960x300/ff7" width="100%">
 
         <% } %>
     </section>
     <section id="topAnimes">
-        <canvas id="topAnimesChart">
+        <% console.log(topAnimeArr)%>
+        <% var topAnimeTitle = topAnimeArr.map((item)=>{return item.title}) %>
+        <% var topAnimember = topAnimeArr.map((item)=>{return item.members}) %>
+
+        <canvas id="topAnimesChart" width="800" height="450">
 
         </canvas>
     </section>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="https://www.jsdelivr.com/package/npm/chart.js"></script>
-    <script src="./js/indexSlider.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="./js/indexSlider.js"></script>
+    <script>
 
+        new Chart($('#topAnimesChart'), {
+            type: 'horizontalBar',
+            data: {
+                labels: topAnimeTitle, //pass it from the ejs to be able to use it here
+                // assume it will not render in the client
+
+                datasets: [
+                    {
+                        label: "Population (millions)",
+                        backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850"],
+                        data: topAnimember
+                    }
+                ]
+            },
+            options: {
+                legend: { display: false },
+                title: {
+                    display: true,
+                    text: 'Top 10 Animes'
+                }
+            }
+        })
+    </script>
 </body>
+
 </html>
