--- a/views/pages/details.ejs
+++ b/views/pages/details.ejs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>details</title>
+        <link rel="stylesheet" href="../../styles/main.css" />
     </head>
     <body>
         <header>
@@ -88,21 +89,26 @@
                     <% } %> <% } %>
                 </section>
                 <section class="recomindition">
-                    <% for( let index = 0; index < 4; index++ ) { %> <% if
-                    (result.recommendations[index] !== undefined) { %>
-                    <form
-                        action="/details/<%= result.recommendations[index].mal_id %>"
-                    >
-                        <button type="submit">
-                            <img
-                                id="random-img"
-                                src="<%= result.recommendations[index].image_url%>"
-                                alt="random.jpg"
-                            />
-                            <h2><%= result.recommendations[index].title%></h2>
-                        </button>
-                    </form>
-                    <% } %> <% } %>
+                    <div class="container row">
+                        <% for( let index = 0; index < 4; index++ ) { %> <% if
+                        (result.recommendations[index] !== undefined) { %>
+                        <form
+                            action="/details/<%= result.recommendations[index].mal_id %>"
+                            class="col"
+                        >
+                            <button type="submit">
+                                <img
+                                    id="random-img"
+                                    src="<%= result.recommendations[index].image_url%>"
+                                    alt="random.jpg"
+                                />
+                                <h2>
+                                    <%= result.recommendations[index].title%>
+                                </h2>
+                            </button>
+                        </form>
+                        <% } %> <% } %>
+                    </div>
                 </section>
             </article>
         </main>
