--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,5 +1,5 @@
 .container {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 .row {
@@ -11,6 +11,7 @@
     width: 220px;
     height: 100%;
     display: flex;
+    margin: 0 auto;
 }
 
 /* .row .col + .col {
