--- a/public/styles/utilities.css
+++ b/public/styles/utilities.css
@@ -14,6 +14,9 @@
 .justify-between {
     justify-content: space-between;
 }
+.justify-around {
+    justify-content: space-around;
+}
 .flex-column {
     flex-direction: column;
 }
