--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../../styles/main.css" />
     <script id="anime-template" type='text/x-tmpl-mustache'>
         <section id="searched-anime">
-            <form id="searched-form" action="/details/{{mal_id}}">
+            <form id="searched-form" class="col" action="/details/{{mal_id}}">
                 <button type="submit">
-                     <h2>{{title}}</h2>
                      <img src="{{image_url}}">
+                     <h2>{{title}}</h2>
                 </button>
             </form>
         </section>
@@ -18,36 +19,44 @@
 </head>
 
 <body>
-    <main>
-        <h2>Search</h2>
-        <form id="searchForm">
-            <input required type="text" id="searchQuery" name="searchQuery">
-            <select name="genre" id="genre">
-                <option value="">Choose Category</option>
-                <option value="&genre=1">Action</option>
-                <option value="&genre=7">Mystery</option>
-                <option value="&genre=8">Drama</option>
-                <option value="&genre=10">Fantasy</option>
-                <option value="&genre=14">Horror</option>
-            </select>
-            <select name="rated" id="rated">
-                <option value="">Choose rated</option>
-                <option value="&rated=g">All Ages</option>
-                <option value="&rated=pg">Children</option>
-                <option value="&rated=pg13">Teens</option>
-                <option value="&rated=r17">Violence</option>
-            </select>
-            <select name="status" id="status">
-                <option value="">Choose status</option>
-                <option value="&status=airing">Airing</option>
-                <option value="&status=completed">Completed</option>
-                <option value="&status=upcoming">Upcoming</option>
-            </select>
-            <button id="searchButton" type="submit">Submit</button>
+    <main class="container text-center">
+        <form id="searchForm" class="searchOptionsGrid">
+            <div >
+                <!-- <h2>Search</h2> -->
+                <input required class="fullWidth" type="text" id="searchQuery" name="searchQuery" placeholder="Search" >
+            </div>
+            <div >
+                <select name="genre" id="genre" class="thirds">
+                    <option value="">Category</option>
+                    <option value="&genre=1">Action</option>
+                    <option value="&genre=7">Mystery</option>
+                    <option value="&genre=8">Drama</option>
+                    <option value="&genre=10">Fantasy</option>
+                    <option value="&genre=14">Horror</option>
+                </select>
+                <select name="rated" id="rated" class="thirds">
+                    <option value="">Rated</option>
+                    <option value="&rated=g">All Ages</option>
+                    <option value="&rated=pg">Children</option>
+                    <option value="&rated=pg13">Teens</option>
+                    <option value="&rated=r17">Violence</option>
+                </select>
+                <select name="status" id="status" class="thirds">
+                    <option value="">Status</option>
+                    <option value="&status=airing">Airing</option>
+                    <option value="&status=completed">Completed</option>
+                    <option value="&status=upcoming">Upcoming</option>
+                </select>
+            </div>
+            <div >
+                <button id="searchButton" type="submit" class="fullWidth">Submit</button>
+            </div>
         </form>
 
 
-        <section id="searchResults" style="display: flex; flex-wrap:wrap;">
+        <section>
+            <div class="container row" id="searchResults">
+            </div>
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.0.1/mustache.min.js"></script>
