--- a/public/styles/utilities.css
+++ b/public/styles/utilities.css
@@ -14,6 +14,9 @@
 .justify-between {
     justify-content: space-between;
 }
+.justify-center {
+    justify-content: center;
+}
 .flex-column {
     flex-direction: column;
 }
@@ -22,6 +25,9 @@
 }
 .align-center {
     align-items: center;
+}
+.flex-wrap {
+    flex-wrap: wrap;
 }
 /* position */
 .relative {
