index and userpanel

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -10,7 +10,6 @@
 .row .col {
     width: 220px;
     height: 100%;
-    display: flex;
     margin: 0 auto;
 }
 
@@ -24,9 +23,10 @@
 .row .col h2 {
     text-overflow: ellipsis;
     overflow: hidden;
-    width: 160px;
+    max-width: 220px;
     height: 1.2em;
     white-space: nowrap;
+    font-size: medium;
 }
 
 .col button {
