--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,6 +1,23 @@
 body{
-    background-image: url('https://i.pinimg.com/originals/48/f3/f8/48f3f8398d3e951b66248848e2f5d0d2.jpg');
     background-color: #2c204873;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+.quoteSec {
+    padding: 2%;
+    background-color: #695597;
+}
+.padding {
+    box-sizing: border-box;
+    padding: 30px;
+
+}
+.banner{
+    background-image: url('https://i.pinimg.com/originals/48/f3/f8/48f3f8398d3e951b66248848e2f5d0d2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 60%;
+    padding: 30px 30px 0px 30px;
+
 }
