--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -33,12 +33,28 @@ option{
     background-color: #d4d4d4;
  
 }
-button:hover{
-    border: 1px solid #ebbefc;
-    box-shadow: 0px 10px 20px #d482f1;
-}
 
 button:not(#searchButton) ,button:not(#searchButton) img{
     border-radius: 15px;
     background-color: #ebbefc0c;
+}
+.feature{
+    padding: 70px 60px;
+    background-color: #ebbefc;
+    flex-grow: 1;
+    margin: 0 1%;
+    flex-basis: 50%;
+}
+.tabs{
+    display: inline-block;
+    width:max-content;
+    padding: 10px;
+    text-decoration: none;
+    color: black;
+}
+.tabs:hover{
+    color: white;
+}
+.active{
+    border: 1px solid black;
 }
