--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,42 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime-Limk</title>
+    <link rel="stylesheet" href="../../styles/main.css" />
     <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css" />
 </head>
 
 <body>
-    <a href="/login">login</a>
-    <a class="lol" href="/logout">logout</a>
-    <a href="/random">random</a>
-    <section id='seasonal'>
-        <% animeArr.forEach((item)=>{%>
-        <div>
-            <form id="searched-form" action="/details/<%= item.id%>">
-                <button type="submit">
-                    <p><%= item.title%></p>
-                    <img src="<%= item.image_url%>" style="max-width: 100%;">
-                </button>
-            </form>
-        </div>
-        <% })%>
-    </section>
-    <section id="banner">
-        <% if(localUsername != null){%>
-        <p>logged</p>
-        <img src="https://placehold.it/960x300/" width="100%">
-        <%}else {%>
-        <p>not logged</p>
-        <img src="https://placehold.it/960x300/ff7" width="100%">
+    <main class="container">
+        <a href="/login">login</a>
+        <a class="lol" href="/logout">logout</a>
+        <a href="/random">random</a>
+        <section class="banner">
+            <section id="banner" class="padding">
+                <% if(localUsername != null){%>
+                <p>Welcome Back</p>
+                <!-- <img src="https://placehold.it/960x300/" width="100%"> -->
+                <p><%= localUsername%></p>
+                <%}else {%>
+                <p>Sign up for free</p>
+                <a href="/login">SIGN UP</a>
+                <!-- <img src="https://placehold.it/960x300/ff7" width="100%"> -->
+        
+                <% } %>
+            </section>
+            <section class="d-flex justify-between ">
+                <div class="feature">SEARCH for animes</div>
+                <div class="feature">KEEP TRACK of your favourite animes</div>
+                <div class="feature">'PLACEHOLDER'</div>
+            </section>
+        </section>
+        <section id='seasonal' class="row padding" >
+            <% animeArr.forEach((item)=>{%>
+            <div>
+                <form id="searched-form" action="/details/<%= item.id%>" class="col">
+                    <button type="submit">
+                        <img src="<%= item.image_url%>" style="max-width: 100%;">
+                        <h2><%= item.title%></h2>
+                    </button>
+                </form>
+            </div>
+            <% })%>
+        </section>
+        <section class="quoteSec padding">
+            <p><span><%= quote.anime%> <%= quote.character%></span></p>
+            <p><%= quote.quote%></p>
+        </section>
 
-        <% } %>
-    </section>
-    <section id="topAnimes">
-
-        <canvas id="topAnimesChart" width="800" height="450">
-
-        </canvas>
-    </section>
+        <section id="topAnimes" class="padding">
+    
+            <canvas id="topAnimesChart" width="800" height="450">
+    
+            </canvas>
+        </section>
+    </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
