--- a/views/pages/userlist.ejs
+++ b/views/pages/userlist.ejs
@@ -8,6 +8,26 @@
 </head>
 
 <body>
+<!-- Password changer form -->
+
+
+    <!-- <div class="change-password">
+        <div class="error-message">
+            <p>message</p>
+        </div>
+        <section>
+            <h2>Change your password</h2>
+            <form action="/passwordchange/_method=put" method="POST">
+                <input required type="password" name="currentPassword" placeholder="***********" minlength="6">
+                <input required type="password" name="newPassword" placeholder="***********" minlength="6">
+                <input required type="password" name="newPasswordValidate" placeholder="***********" minlength="6">
+                <input required type="submit">
+            </form>
+        </section>
+    </div> -->
+
+
+
     <main>
         <!-- --- favourites --- -->
         <section class="favourites">
