--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,23 +1,41 @@
+
 body{
-    background-color: #2c204873;
-    background-size: cover;
-    background-repeat: no-repeat;
+    background: url(http://estudiopatagon.com/themes/wordpress/reinv5/wp-content/uploads/2019/08/bg-body-op-1.jpg) no-repeat top center fixed !important; ;
+    font-family: 'Playfair Display', serif;
+    color: wheat;
+
 }
 
 .quoteSec {
     padding: 2%;
-    background-color: #695597;
+    text-align: center;
+    font-size: larger ;
+    font-weight: lighter;
+    letter-spacing: 2px;
 }
 .padding {
     box-sizing: border-box;
     padding: 30px;
-
+   ;
 }
+
+
 .banner{
-    background-image: url('https://i.pinimg.com/originals/48/f3/f8/48f3f8398d3e951b66248848e2f5d0d2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 60%;
     padding: 30px 30px 0px 30px;
+
+}
+.colorback  {  
+    background-color:  #2c20482d;
+
+}
+
+hr {
+    margin-top: 100px;
+    display: inline-block;
+    border: 1px solid #E85D6F;
+    width: 15%;
 
 }
