--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+
 @import "./layout.css";
 @import "./utilities.css";
 @import "./base.css";
