--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,4 +1,4 @@
-/* Search Form */
+
 .inlineBlock{
     display: inline-block;
 }
@@ -35,15 +35,17 @@ option{
 }
 
 button:not(#searchButton) ,button:not(#searchButton) img{
-    border-radius: 15px;
-    background-color: #ebbefc0c;
+    border-radius: 3px;
+    background-color:  #2c2048;
 }
 .feature{
     padding: 70px 60px;
-    background-color: #ebbefc;
+    background-color:  #2c2048;
     flex-grow: 1;
-    margin: 0 1%;
+    margin: 0 6%;
     flex-basis: 50%;
+    border-radius: 3px;
+
 }
 .tabs{
     display: inline-block;
@@ -57,4 +59,35 @@ button:not(#searchButton) ,button:not(#searchButton) img{
 }
 .active{
     border: 1px solid black;
+}
+.bannerText{
+    font-size: 50px;
+}
+#banner{
+    margin: 80px 0px;
+}
+.indexButtons{
+    padding: 10px 20px;
+    border: 2px solid #E85D6F;
+    text-decoration: none;
+    border-radius: 3px;
+
+}
+.indexButtons:active, .indexButtons:visited{
+    font-family: 'Playfair Display', serif;
+    color: white;
+
+}
+.rotate{
+    transform: rotate(180deg);
+}
+.quote{
+    display: inline-block;
+    width:60px;
+}
+.quoteClose{
+    text-align: right;
+}
+.quoteClose hr{
+    margin-top: 0px;
 }
