--- a/views/pages/details.ejs
+++ b/views/pages/details.ejs
@@ -96,7 +96,7 @@
                             action="/details/<%= result.recommendations[index].mal_id %>"
                             class="col"
                         >
-                            <button type="submit">
+                            <button type="submit" class="detailsBtn">
                                 <img
                                     id="random-img"
                                     src="<%= result.recommendations[index].image_url%>"
