--- a/views/pages/random-animes.ejs
+++ b/views/pages/random-animes.ejs
@@ -15,7 +15,7 @@
             <section class="random-details">details</section>
             <section class="generated-anime">
                 <form action="">
-                    <button type="submit">
+                    <button type="submit" class="detailsBtn">
                         <img
                             id="random-img"
                             src="./images/random.jpg"
