--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -9,7 +9,7 @@
     <script id="anime-template" type='text/x-tmpl-mustache'>
         <section id="searched-anime">
             <form id="searched-form" class="col" action="/details/{{mal_id}}">
-                <button type="submit">
+                <button type="submit" class="detailsBtn">
                      <img src="{{image_url}}">
                      <h2>{{title}}</h2>
                 </button>
