--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -106,8 +106,9 @@ header nav button:hover {
 } */
 /* footer */
 footer {
-    padding: 3em;
+    padding: 1em;
     background-color: #362953;
+    font-size: 14px;
 }
 footer .follow-us i {
     color: #0e76a8;
