--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -114,10 +114,12 @@ button.detailsBtn{
     text-align: right;
 }
 .quoteClose hr{
-    margin-top: 0px;
+    margin-top: 0px;}
 
+.error-message{
+    color:var(--main-color);
+}
 .login-container {
-    background-image: url('https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/123740332/original/934af649631a2dc8730f0b63cfed1e63908b6f08/create-anime-background-style.jpg');
     /* height: 600px; */
     background-position: center;
     background-repeat: no-repeat;
@@ -128,7 +130,8 @@ button.detailsBtn{
 }
 
 .login-form-wrap {
-    width: 680px;
+    min-height: 350px;
+    width: 400px;
     background-color: rgba(255, 255, 255, 0.863);
     border-radius: 10px;
     position: relative;
@@ -143,7 +146,7 @@ button.detailsBtn{
 .login-form-title {
     width: 100%;
     display: block;
-    font-size: 39px;
+    font-size: 24px;
     color: #555555;
     line-height: 1.2;
     text-align: center;
@@ -169,17 +172,18 @@ button.detailsBtn{
     background-color: #f7f7f7;
     border: 1px solid #e6e6e6;
     border-radius: 10px; 
+    margin:20px auto 20px auto;
 }
 
 .login-input{
     color: #333333;
     line-height: 1.2;
-    font-size: 18px;
+    font-size: 16px;
   
     display: block;
     width: 100%;
     background: transparent;
-    height: 60px;
+    height: 45px;
     padding: 0 20px;
     outline: none;
     border: none;
@@ -189,16 +193,17 @@ button.detailsBtn{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .login-form-button{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 20px;
-    width: 100%;
-    height: 60px;
-    background-color: #333333;
+    padding: 0 15px;
+    width: 75%;
+    height: 45px;
+    background-color:var(--main-color);
     border-radius: 10px;
     font-size: 16px;
     color: #fff;
@@ -213,6 +218,10 @@ button.detailsBtn{
 }
 
 .login-button-second{
-    background-color: #381e1e;
+    background-color: var(--main-color);
     margin-top: 15px;
+}
+
+.slick-dots{
+    position: static; 
 }
