--- a/public/styles/utilities.css
+++ b/public/styles/utilities.css
@@ -15,7 +15,7 @@
     justify-content: space-between;
 }
 .justify-around {
-    justify-content: space-around;
+    justify-content: space-around;}
 .justify-center {
     justify-content: center;
 }
