--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime-Limk</title>
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+/>
     <link rel="stylesheet" href="../../styles/main.css" />
     <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css" />
+    
 </head>
 
 <body>
-    <a href="/logout">logout</a>
-    <a href="/random">random</a>
+    <%- include('../layouts/nav') %>
+
     <section class="banner container">
         <section id="banner" class="padding">
             <% if(localUsername != null){%>
@@ -51,8 +56,9 @@
             </section>
             <img src="https://kingstonhsc.ca/kgh-journey/images/icons/Section2-Quote-PinkEnd.png" class="rotate quote">
             <section class="quoteSec padding">
-                <p><span><%= quote.anime%> <%= quote.character%></span></p>
                 <p><%= quote.quote%></p>
+                <p><span> - <%= quote.character%> <br> <%= quote.anime%></span></p>
+
             </section>
             <div class="quoteClose">
                 <img src="https://kingstonhsc.ca/kgh-journey/images/icons/Section2-Quote-PinkEnd.png" class="quote">
@@ -66,6 +72,7 @@
             </section>
         </div>
     </main>
+    <%- include('../layouts/footer') %>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
