--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+/>
     <link rel="stylesheet" href="../../styles/main.css" />
     <script id="anime-template" type='text/x-tmpl-mustache'>
         <section id="searched-anime">
@@ -19,6 +23,7 @@
 </head>
 
 <body>
+    <%- include('../layouts/nav') %>
     <main class="container text-center">
         <form id="searchForm" class="searchOptionsGrid">
             <div >
@@ -59,9 +64,11 @@
             </div>
         </section>
     </main>
+    <%- include('../layouts/footer') %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.0.1/mustache.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./js/getSearch.js"></script>
+    
 </body>
 
 </html>
