--- a/views/layouts/nav.ejs
+++ b/views/layouts/nav.ejs
@@ -1,10 +1,10 @@
 <header>
     <div class="container">
-        <!-- <a href="/" class="logo">
-            <h1>anime</h1>
-        </a> -->
         <nav class="d-flex justify-between">
             <ul class="nav-links d-flex ul-none">
+                <li>
+                    <img src="../../images/logo2.PNG" alt="animatic logo" id="logo">
+                </li>
                 <li><a href="/">Home</a></li>
                 <li><a href="/random">Random Anime</a></li>
                 <li><a href="/search">Search</a></li>
