--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -43,7 +43,7 @@
         </div>
         <div class="login-container d-flex">
             <div class="login-form-wrap">
-                <form class="width100 justify-between flex-wrap " action="/signup" method="POST">
+                <form class="width100 justify-between flex-wrap" action="/signup" method="POST">
                     <span class="login-form-title">
                         Sign up!
                     </span>
@@ -67,7 +67,7 @@
             </div>
             <div class="login-form-wrap">
 
-                <form class="width100 justify-between flex-wrap" action="/signin" method="POST">
+                <form class="width100 justify-between flex-wrap d-flex" action="/signin" method="POST">
                     <span class="login-form-title">
                         Sign in!
                     </span>
