--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -24,7 +24,7 @@
 
 <body>
     <%- include('../layouts/nav') %>
-    <main class="container text-center">
+    <main class="container text-center minvh">
         <form id="searchForm" class="searchOptionsGrid">
             <div >
                 <!-- <h2>Search</h2> -->
