--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime-Limk</title>
-    <link
-    rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
-/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="../../styles/main.css" />
     <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css" />
-    
+
 </head>
 
 <body>
@@ -27,7 +24,7 @@
             <%}else {%>
             <p class="bannerText">Sign up for free</p>
             <a href="/login" class="indexButtons">SIGN UP</a>
-    
+
             <% } %>
         </section>
         <!-- <section class="d-flex justify-around ">
@@ -36,12 +33,11 @@
             <div class="feature">'PLACEHOLDER'</div>
         </section> -->
     </section>
-    <main class="colorback">
-        <div class="container">
+    <main>
+        <div class="parallax-anime-div">
             <hr>
             <p class="bannerText">Seasonal Anime</p>
-
-            <section id='seasonal' class="row padding" >
+            <section id='seasonal' class="row padding">
 
                 <% animeArr.forEach((item)=>{%>
                 <div>
@@ -54,6 +50,9 @@
                 </div>
                 <% })%>
             </section>
+        </div>
+        <div class="container">
+
             <img src="https://kingstonhsc.ca/kgh-journey/images/icons/Section2-Quote-PinkEnd.png" class="rotate quote">
             <section class="quoteSec padding">
                 <p><%= quote.quote%></p>
@@ -63,6 +62,8 @@
             <div class="quoteClose">
                 <img src="https://kingstonhsc.ca/kgh-journey/images/icons/Section2-Quote-PinkEnd.png" class="quote">
             </div>
+        </div>
+        <div class="parallax-anime-div" style="margin-bottom:100px;">
             <hr>
             <p class="bannerText">Top Anime</p>
 
@@ -72,11 +73,14 @@
             </section>
         </div>
     </main>
+    <%- include('../layouts/notification') %>
     <%- include('../layouts/footer') %>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="./js/indexSlider.js"></script>
+    <script src="../../js/app.js"></script>
+
     <script>
 
     </script>
