--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,6 +22,7 @@
         <section id="banner" class="padding">
             <% if(localUsername != null){%>
             <p class="bannerText">Welcome Back</p>
+            <p class="smallerBannerText">Go to your Anime Collection</p>
             <a href="/user_list" class="indexButtons">User panel</a>
 
             <%}else {%>
