--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -54,7 +54,7 @@
                 </select>
             </div>
             <div >
-                <button id="searchButton" type="submit" class="fullWidth">Submit</button>
+                <button id="searchButton" type="submit" class="indexButtons">Submit</button>
             </div>
         </form>
 
