--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -48,13 +48,14 @@
 .thirds{
     width: 31.5%;
 }
-option,select,button#searchButton{
+option,select{
     box-sizing: border-box;
     background-color: #E85D6F;
     padding: 5px;
     border: none;
     border: 1px solid #b990c9;
 }
+
 option{
     background-color: #d4d4d4;
  
@@ -62,7 +63,10 @@ option{
 
 button.detailsBtn{
     border-radius: 3px;
-    background-color:  #2c20481f;
+    background-color:  #2c2048;
+    box-shadow: 0px 0px 10px #2c2048;
+    padding: 5px;
+    border: 1px solid rgba(220, 220, 200, 0.555);
 }
 .feature{
     padding: 70px 60px;
@@ -88,6 +92,8 @@ button.detailsBtn{
 }
 .bannerText{
     font-size: 50px;
+    font-family: 'Playfair Display', serif;
+
 }
 #banner{
     margin: 80px 0px;
@@ -97,12 +103,22 @@ button.detailsBtn{
     border: 2px solid #E85D6F;
     text-decoration: none;
     border-radius: 3px;
+    background-color: transparent;
+    color: rgb(220, 220, 200);
 
 }
 .indexButtons:active, .indexButtons:visited{
     font-family: 'Playfair Display', serif;
     color: white;
 
+}
+.indexButtons:hover{
+    border: 2px solid #ff7f90;
+    color: white;
+
+}
+#searchButton{
+    width: 32%;
 }
 .rotate{
     transform: rotate(180deg);
@@ -114,9 +130,6 @@ button.detailsBtn{
 .quoteClose{
     text-align: right;
 }
-.quoteClose hr{
-    margin-top: 0px;}
-
 .error-message{
     color:var(--main-color);
 }
